crates/solidity/testing/snapshots/bindings_output/variables/var_declaration/generated/0.7.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or AssemblyKeyword or BoolKeyword or BreakKeyword or ByteKeyword or BytesKeyword or CloseBrace or ContinueKeyword or DecimalLiteral or DoKeyword or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or DoubleQuotedUnicodeStringLiteral or EmitKeyword or FalseKeyword or FixedKeyword or ForKeyword or FunctionKeyword or HexLiteral or Identifier or IfKeyword or IntKeyword or MappingKeyword or NewKeyword or OpenBrace or OpenBracket or OpenParen or PayableKeyword or ReturnKeyword or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or SingleQuotedUnicodeStringLiteral or StringKeyword or TrueKeyword or TryKeyword or TypeKeyword or UfixedKeyword or UintKeyword or WhileKeyword.
   ╭─[input.sol:4:9]
   │
 4 │ ╭─▶         var v = value;
   ┆ ┆   
 6 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── def: 1
 2 │     struct Value { int x; }
   │            ──┬──       ┬  
   │              ╰──────────── def: 2
   │                        │  
   │                        ╰── def: 3
 3 │     function test(Value memory value) public {
   │              ──┬─ ──┬──        ──┬──  
   │                ╰────────────────────── def: 4
   │                     │            │    
   │                     ╰───────────────── ref: 2
   │                                  │    
   │                                  ╰──── def: 5
───╯
